# bspsGPU

./: .gitmodules  BSPS.hxx  BSPSIO.cxx  BSPSIO.hxx  BSPSTexGPU.hxx  CMakeLists.txt  DM3IO.cxx  DM3IO.hxx  GLBSPS.hxx  GLMeshVBO.cxx  GLMeshVBO.hxx  GLShader.hxx  MeshRApp.hxx  PNGImage.hxx  POLIO.cxx  POLIO.hxx  README.md  RenderTexture.h  RenderTextureFBO.h  binsearch.cg  bsps.cg  bsps3.cg  bsps5.cg  bsps_org.cg  bspsgpu-vs2013.sln  bspsgpu-vs2015.sln  bspsgpu-vs2019.sln  bspsgpu.cxx  bspsgpu.sln  bspsgpu.vcproj  bspsgpu.vcxproj  bspsgpu_paths.h  isophoto_fp.cg  isophoto_vp.cg  mydefine.h  opennurbs_zlib_alloc_glue.cxx  pbuffer.cpp  pbuffer.h  renderToVA.h  renderVertexArray.cpp  (+7 more)
cmake/: embed_shaders.cmake
inc/png/: png.h  pngconf.h
inc/shared/: ErrorHandling.h  GLProgram.h  GLShader.h  TileManager.h  ValueGraph.h
inc/shared/geep/: streamopGL.h
render/: Arcball.hxx  BBox2.hxx  ColorConv.hxx  GLLight.hxx  GLMaterial.hxx  GLMesh.hxx  GLMeshR.hxx  GLMeshVBO.hxx  GLPanel.hxx  IDInfo.hxx  MeshR.hxx  MeshRApp.hxx  OBJRIO.hxx  OFFRIO.hxx  PNGImage.hxx  RIO.hxx  SMFRIO.hxx  SelMesh.hxx  SelMeshR.hxx  VWIO.hxx  c11timer.hxx  envDep.h  gouraud.frag  gouraud.vert  gzstream.h  mtldata.h  mydef.h  nvtimer.h  phong.frag  phong.vert  shaders.h  strutil.h  texture.frag  texture.vert  timer.hxx  tokenizer.h
shaders/: bsps.frag.glsl  bsps.vert.glsl  isophoto.frag.glsl  isophoto.vert.glsl
vecmath-c++-1.2-1.4/: AxisAngle4_.h  Color3.h  Color4.h  Makefile.unix  Matrix3.h  Matrix3_.h  Matrix4.h  Matrix4_.h  Point2.h  Point3.h  Point4.h  Quat4.h  Quat4_.h  TexCoord2.h  Tuple2.h  Tuple3.h  Tuple4.h  Vector2.h  Vector3.h  Vector4.h  VmUtil.h  vm_conf.h
